--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,11 @@
         "symfony/yaml": "6.4.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9",
+        "roave/security-advisories": "dev-latest",
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "6.4.*",
+        "symfony/phpunit-bridge": "^7.0"
     },
     "config": {
         "allow-plugins": {
