--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,19 +6,35 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/'
+    exclude:
+      - '../src/DependencyInjection/'
+      - '../src/Entity/'
+      - '../src/Kernel.php'
+
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+  cashReserveGenerator:
+    class: App\Generator\CashReserveGenerator
+    arguments:
+      $denominations: [1, 5, 10, 25, 50, 100, 200] # in cents
+      $maxQuantity: 100
+
+  App\Model\VendingMachine:
+    arguments:
+      $inventory: { 'Water': 100, 'Soda': 150 } # key is the product name, value is product price in cents
+      $cashReserve: '@cashReserveGenerator' # key is the denomination, value is the quantity
+
+  App\Repository\VendingMachineRepository:
+    arguments:
+      $vendingMachine: '@App\Model\VendingMachine'
